NOD-268: [SVILUPPO] Nuovi FdR - JUnit Tests